--- a/app/src/main/res/layout/fragment_mine_header.xml
+++ b/app/src/main/res/layout/fragment_mine_header.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<LinearLayout android:gravity="center"
-    android:background="#e4eaae"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingTop="30dp"
-    android:paddingBottom="10dp"
-    android:layout_height="wrap_content"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#e4eaae"
+    android:gravity="center"
     android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:paddingBottom="10dp"
+    android:paddingTop="30dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_height="100dp"
+        android:id="@+id/cv"
         android:layout_width="100dp"
+        android:layout_height="100dp"
         android:src="@mipmap/touxiang"
         app:civ_border_color="#171616"
-        app:civ_border_width="2dp"
-        android:id="@+id/cv"/>
+        app:civ_border_width="2dp" />
+
     <TextView
         android:id="@+id/mf_username"
-        android:layout_marginTop="25dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:text="用户名"/>
+        android:layout_marginTop="25dp"
+        android:text="用户名"
+        android:textSize="20dp" />
 
 </LinearLayout>
